remove border around finances, add line to divide btw charts and topic data, fix spacing

--- a/scss/partials/_d3_chart.scss
+++ b/scss/partials/_d3_chart.scss
@@ -1,10 +1,6 @@
 div.composed-section {
 
   div.bordered-chart {
-    border-style: solid;
-    border-width: 1px;
-    border-color: $oc_gray_2;
-    border-radius: 5px;
     margin-left: 10px;
     margin-right: 10px;
     padding-top: 20px;
